force-app/main/default/objects/Licencia__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>