force-app/main/default/objects/Licencia__c/fields/Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Beneficio__c</fullName>
    <formula>(Precio_unitario__c - Coste_unitario__c -  Comision__c ) * Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>