force-app/main/default/objects/Licencia__c/fields/Comision__c.field-meta.xml
<CustomField>
    <fullName>Comision__c</fullName>
    <label>Comisión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>