force-app/main/default/objects/Licencia__c/fields/Coste_a_elevar__c.field-meta.xml
<CustomField>
    <fullName>Coste_a_elevar__c</fullName>
    <formula>Coste_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste_a_elevar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>