force-app/main/default/objects/Licencia__c/fields/Coste_total__c.field-meta.xml
<CustomField>
    <fullName>Coste_total__c</fullName>
    <formula>Coste_unitario__c *   Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste_total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>