force-app/main/default/objects/Licencia__c/fields/Coste_unitario__c.field-meta.xml
<CustomField>
    <fullName>Coste_unitario__c</fullName>
    <label>Coste unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>