force-app/main/default/objects/Licencia__c/fields/Datos_validados__c.field-meta.xml
<CustomField>
    <fullName>Datos_validados__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Fabricante__c ))) &amp;&amp;
NOT(ISBLANK( Comision__c )) &amp;&amp;
NOT(ISBLANK( Coste_unitario__c )) &amp;&amp;
NOT(ISBLANK( Margen__c )) &amp;&amp;
NOT(ISBLANK( Name )) &amp;&amp;
NOT(ISBLANK( Unidades__c )) &amp;&amp;
NOT(ISBLANK( Precio_unitario__c )) &amp;&amp;
NOT(ISBLANK( Fecha_de_activacion__c )) &amp;&amp;
NOT(ISBLANK( Fecha_de_expiracion__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Comprueba que se encuentran rellenos los campos necesarios para el paso a Entregada y posterior sincronización con SAP</inlineHelpText>
    <label>Datos validados</label>
    <type>Checkbox</type>
</CustomField>