force-app/main/default/objects/Licencia__c/fields/Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Fabricante__c</fullName>
    <label>Fabricante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fabricantes_de_Licencias</valueSetName>
    </valueSet>
</CustomField>