force-app/main/default/objects/Licencia__c/fields/Fecha_de_expiracion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_expiracion__c</fullName>
    <label>Fecha de expiración</label>
    <type>Date</type>
</CustomField>