force-app/main/default/objects/Licencia__c/fields/Fecha_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pedido__c</fullName>
    <label>Fecha Pedido</label>
    <type>Date</type>
</CustomField>