force-app/main/default/objects/Licencia__c/fields/Importe_a_elevar__c.field-meta.xml
<CustomField>
    <fullName>Importe_a_elevar__c</fullName>
    <formula>Precio_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe a elevar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>