force-app/main/default/objects/Licencia__c/fields/Linea_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Proyecto__c</fullName>
    <description>Linea de proyecto con la que esta relacionada la Licencia</description>
    <label>Línea de Proyecto</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipLabel>Licencias</relationshipLabel>
    <relationshipName>Licencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>