force-app/main/default/objects/Licencia__c/fields/Margen__c.field-meta.xml
<CustomField>
    <fullName>Margen__c</fullName>
    <formula>1-((Coste_unitario__c + Comision__c) /  Precio_unitario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>