force-app/main/default/objects/Licencia__c/fields/Otro_fabricante__c.field-meta.xml
<CustomField>
    <fullName>Otro_fabricante__c</fullName>
    <inlineHelpText>A cumplimentar en caso de haber marcado &quot;Otro&quot; en el desplegable de fabricantes</inlineHelpText>
    <label>Otro fabricante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>