force-app/main/default/objects/Licencia__c/fields/Precio_total__c.field-meta.xml
<CustomField>
    <fullName>Precio_total__c</fullName>
    <formula>Precio_unitario__c * Unidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>