force-app/main/default/objects/Licencia__c/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>